--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -29,3 +29,10 @@ django-debug-toolbar  # https://github.com/jazzband/django-debug-toolbar
 django-extensions  # https://github.com/django-extensions/django-extensions
 django-coverage-plugin  # https://github.com/nedbat/django_coverage_plugin
 pytest-django  # https://github.com/pytest-dev/pytest-django
+# Authentication
+# ------------------------------------------------------------------------------
+django-allauth  # https://github.com/pennersr/django-allauth
+
+# API Documentation
+# ------------------------------------------------------------------------------
+drf-spectacular  # https://github.com/tfranzel/drf-spectacular
